# tinyapl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  deno.jsonc  tinyapl.cabal
.github/workflows/: deploy.yml
app/: Main.hs  build.sh
app/TinyAPL/: CLI.hs  Files.hs
app/TinyAPL/Quads/: File.hs
cbits/: wasm_init.c  wasm_init_stub.c
docs/: .gitignore  deno.jsonc  interpreters.ts  main.tsx  markdown.ts  pages.ts  precompile.tsx  types.d.ts  utils.ts
docs/assets/: style.css
docs/components/: Banners.tsx  CombinatorDiagram.tsx  Data.tsx  DocsPage.tsx  FullPage.tsx  GlyphPage.tsx  Header.tsx  HighlightCode.tsx  Index.tsx  InfoPage.tsx  Planned.tsx  PrimitiveLink.tsx  PrimitivePage.tsx  Primitives.tsx  QuadPage.tsx  RunInterpreter.tsx  Sidebar.tsx
docs/interpreters/0.10.0/: ghc_wasm_jsffi.d.ts  ghc_wasm_jsffi.js
docs/interpreters/0.11.0/: ghc_wasm_jsffi.js  tinyapl.d.ts
docs/interpreters/0.11.1/: ghc_wasm_jsffi.d.ts  ghc_wasm_jsffi.js  quads.js  tinyapl.js
docs/interpreters/0.5.0/: ghc_wasm_jsffi.js  tinyapl-js.wasm
docs/interpreters/0.5.1/: ghc_wasm_jsffi.js  index.html  tinyapl-js.wasm
docs/interpreters/0.6.0/: ghc_wasm_jsffi.js  index.html  quads.js  tinyapl.d.ts
docs/interpreters/0.7.0/: ghc_wasm_jsffi.d.ts  ghc_wasm_jsffi.js  wav.d.ts
docs/interpreters/0.8.0/: index.html  quads.d.ts
docs/interpreters/0.9.0/: ghc_wasm_jsffi.d.ts  ghc_wasm_jsffi.js  index.d.ts
docs/interpreters/latest/: ghc_wasm_jsffi.d.ts  ghc_wasm_jsffi.js  index.html  index.js  quads.d.ts  quads.js  tinyapl-js.wasm  tinyapl.d.ts  tinyapl.js  tsconfig.tsbuildinfo  wav.js
docs/interpreters/latest/std/: math.tinyapl  prototype.tinyapl
docs/pages/: after.md  and.md  at.md  at_rank.md  binomial.md  catenate.md  ceiling.md  circular.md  constant.md  default_bind.md  direction.md  drop.md  each.md  each_left.md  element_of.md  encode.md  equal_to.md  exponential.md  factorial.md  floor.md  fork.md  half_pair.md  index.md  index.mdx  index_generator.md  index_of.md  inner_product.md  key.md  key_vocabulary.md  last.md  left_hook.md  less_than.md  less_than_or_equal_to.md  logarithm.md  magnitude.md  matrix_divide.md  maximum.md  mirror.md  nand.md  nest.md  (+34 more)
docs/pages/glyphs/: at.mdx  black_i.mdx  black_r.mdx  circle.mdx  circle_backslash.mdx  circle_bar.mdx  circle_cross.mdx  circle_dots.mdx  circle_plus.mdx  circle_star.mdx  colon_overbar.mdx  colon_tilde.mdx  comma.mdx  comma_bar.mdx  cross.mdx  dash.mdx  dash_dots.mdx  dash_stile.mdx  del_dots.mdx  del_stile.mdx  dot_colon.mdx  dots.mdx  double_down_arrow.mdx  double_left_tack.mdx  double_left_wedge.mdx  double_minus.mdx  double_plus.mdx  double_right_wedge.mdx  double_up_arrow.mdx  down_arrow.mdx  down_circle.mdx  down_shoe.mdx  down_stile.mdx  down_tack.mdx  down_tack_jot.mdx  down_wedge.mdx  down_wedge_tilde.mdx  ellipsis.mdx  epsilon.mdx  epsilon_overbar.mdx  (+77 more)
docs/pages/info/: combinators.md  combinators.mdx  combinators_trains.md  combinators_trains.mdx  derivative.mdx  dictionaries.mdx  minimal_set.mdx  ordering.md  ordering.mdx  trains.md  trains.mdx
docs/pages/primitives/: add.md  add.mdx  after.md  after.mdx  alternant.mdx  and.mdx  arctangent.md  arctangent.mdx  array_input.md  at.mdx  at_depth.md  at_depth.mdx  at_rank.md  atop.md  atop.mdx  average.mdx  before.md  before.mdx  bind.mdx  binomial.mdx  boxed.md  cartesian.mdx  case.mdx  case_fold.mdx  catenate.mdx  ceiling.md  character_input.md  character_input.mdx  circular.md  circular.mdx  commute.md  commute.mdx  conjugate.mdx  constant.md  constant.mdx  count.md  count.mdx  deal.mdx  decode.mdx  decrement.mdx  (+194 more)
docs/pages/quads/: assert.mdx  bin_file.md  case.md  comparison_tolerance.md  comparison_tolerance.mdx  csv.md  date_time.md  delay.mdx  digits.md  digits.mdx  exists.md  exists.mdx  file.md  file_read.mdx  file_write.mdx  http.md  import.mdx  index_origin.md  index_origin.mdx  json.md  lowercase.md  lowercase.mdx  math_arccos.mdx  math_arcosh.mdx  math_arcsin.mdx  math_arctan.mdx  math_arsinh.mdx  math_artanh.mdx  math_complementary.mdx  math_cos.mdx  math_cosh.mdx  math_pi.mdx  math_sin.mdx  math_sinh.mdx  math_tan.mdx  math_tanh.mdx  partition.md  partition.mdx  repr.md  seed.md  (+9 more)
examples/: cat.tinyapl  sum.tinyapl
ffi/: Main.hs  build_test.bat  build_test.sh  test.c
ffi/TinyAPL/: FFI.hs
gamma/TinyAPL/Gamma/: Gamma.hs-boot
gamma/TinyAPL/Gamma/Gamma/: Incomplete.hs  Lanczos.hs  Stirling.hs
js/: .gitignore  build-frontend-only.sh  build.sh  copy.sh  index.html  index.js  index.ts  package-lock.json  package.json  quads.js  quads.ts  tinyapl.js  tinyapl.ts  tsconfig.json  wav.ts
js/src/: JSBridge.hs  Main.hs
src/: TinyAPL.hs
src/TinyAPL/: Array.hs  ArrayFunctionOperator.hs  Complex.hs  CoreQuads.hs  Error.hs  Function.hs  Functions.hs  Glyphs.hs  Highlighter.hs  Interpreter.hs  Interpreter.hs-boot  Operator.hs  Parser.hs  Primitives.hs  Random.hs  StandardLibrary.hs  Util.hs
src/TinyAPL/CoreQuads/: Math.hs  Regex.hs  Unicode.hs
src/TinyAPL/Gamma/: Factorial.hs  Gamma.hs  Gamma.hs-boot
src/TinyAPL/Gamma/Gamma/: Incomplete.hs  Lanczos.hs  Stirling.hs
src/TinyAPL/StandardLibrary/: Internal.hs
std/: bitwise.tinyapl  math.tinyapl  prototype.tinyapl  sbcs.tinyapl
test/TinyAPL/: ArraySpec.hs  ParserSpec.hs  PrimitivesSpec.hs
