cabal-version:      3.0
name:               tinyapl
version:            0.2.0.0
synopsis:           TinyAPL is a tiny APL dialect

-- A longer description of the package.
-- description:
homepage:           https://blog.rubenverg.com/?tag=tinyapl

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Madeline Vergani
maintainer:         me@rubenverg.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common warnings
    ghc-options: -W

library
    import:           warnings
    exposed-modules:  TinyAPL.Glyphs
                    , TinyAPL.ArrayFunctionOperator
                    , TinyAPL.Error
                    , TinyAPL.Interpreter
                    , TinyAPL.Parser
                    , TinyAPL.Primitives
    other-modules: TinyAPL.Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                    , parsec ^>=3.1.17.0
                    , mtl ^>=2.3.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable tinyapl
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                    , tinyapl

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tinyapl-tests
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    TinyAPL.ArraySpec
                    , TinyAPL.PrimitivesSpec
    build-depends:    base ^>=4.18.0.0
                    , hspec ^>=2.11.7
                    , hspec-discover ^>=2.11.7
                    , tinyapl
    build-tool-depends:
        hspec-discover:hspec-discover >= 2.11.7