cabal-version:      3.0
name:               tinyapl
version:            0.6.0.0
synopsis:           TinyAPL is a tiny APL dialect

-- A longer description of the package.
-- description:
homepage:           https://blog.rubenverg.com/?tag=tinyapl

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Madeline Vergani
maintainer:         me@rubenverg.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common warnings
    ghc-options: -W

library
    import:           warnings
    exposed-modules:  TinyAPL.Glyphs
                    , TinyAPL.ArrayFunctionOperator
                    , TinyAPL.CoreQuads
                    , TinyAPL.CoreQuads.Math
                    , TinyAPL.Complex
                    , TinyAPL.Error
                    , TinyAPL.Functions
                    , TinyAPL.Highlighter
                    , TinyAPL.Interpreter
                    , TinyAPL.Parser
                    , TinyAPL.Primitives
                    , TinyAPL.Random
                    , TinyAPL.Util
                    , TinyAPL.Gamma.Factorial
                    , TinyAPL.Gamma.Gamma
                    , TinyAPL.Gamma.Gamma.Incomplete
                    , TinyAPL.Gamma.Gamma.Lanczos
                    , TinyAPL.Gamma.Gamma.Stirling
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , megaparsec ^>=9.6.1
                    , mtl ^>=2.3.1
                    , random ^>=1.2.1.2
                    , time ^>=1.12
                    , matrix ^>=0.3.6.3
                    , continued-fractions ^>=0.10.0.2
                    , converge ^>=0.1.0.1
                    , vector ^>=0.13.1.0
                    , parsers ^>=0.12.11
    hs-source-dirs:   src
    default-language: Haskell2010

executable tinyapl
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , tinyapl

    hs-source-dirs:   app
    default-language: Haskell2010

executable tinyapl-js
    import:           warnings
    main-is:          Main.hs

    other-modules:    JSBridge

    build-depends:    base ^>=4.20.0.0
                    , ghc-experimental ^>=0.1.0.0
                    , tinyapl
    
    hs-source-dirs:   js/src
    default-language: Haskell2010
    
    if os(wasi)
        ghc-options:  -W -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    else
        build-depends:ghc-wasm-compat
        ghc-options:  -W -fplugin GHC.Wasm.FFI.Plugin

test-suite tinyapl-tests
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    TinyAPL.ArraySpec
                    , TinyAPL.ParserSpec
                    , TinyAPL.PrimitivesSpec
    build-depends:    base ^>=4.20.0.0
                    , hspec ^>=2.11.7
                    , hspec-discover ^>=2.11.7
                    , tinyapl
    build-tool-depends:
        hspec-discover:hspec-discover >= 2.11.7
